--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ dependencies {
     implementation "org.apache.commons:commons-collections4:4.3"
     implementation "com.hierynomus:sshj:0.27.0"
     implementation "com.ancientprogramming.fixedformat4j:fixedformat4j:1.2.2"
+    implementation "org.rapidoid:rapidoid-commons:5.5.5"
+    // https://mvnrepository.com/artifact/uk.com.robust-it/cloning
+    implementation "uk.com.robust-it:cloning:1.9.12"
+
 }
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
